Add Flutter local notifications and update dependencies
- Updated analysis_options.yaml to include additional linter rules.
- Modified xcconfig files to include Pods for debug and release configurations.
- Added flutter_local_notifications dependency in pubspec.yaml.
- Updated pubspec.lock with new dependencies.
- Registered flutter_local_notifications plugin in GeneratedPluginRegistrant.swift.
- Created Podfile for iOS and macOS with necessary configurations.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: budget_buddy
-description: "A new Flutter project."
+description: "A simple budgeting app."
 publish_to: 'none'
 version: 0.1.0
 
@@ -7,8 +7,12 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  file: ^7.0.1
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^19.1.0
+  plaid_flutter: ^4.2.0
+  syncfusion_flutter_charts: ^29.1.39
 
 dev_dependencies:
   flutter_test:
