--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  pages: write
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -16,7 +20,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.29.3'
+          flutter-version: "3.29.3"
 
       - name: Install dependencies
         run: flutter pub get
@@ -29,4 +33,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: build/web
-          # optional: keep_history: true     # if you want to preserve gh-pages branch history
+          publish_branch: gh-pages
+          # allow_empty_commit: true    # optional
+          # keep_history: true          # optional
