--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         run: flutter pub get
 
       - name: Build web release
-        run: flutter build web --release
+        run: flutter build web --release --base-href /budget-buddy/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
